--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,8 +1,20 @@
 @charset "utf-8";
 
+@import url('./font.scss');
+
 :root {
   --red: #ea7664;
   --black: #544f4f;
   --brown: #89757a;
   --beige: #f6f5f5;
+}
+
+// 웹 폰트 서비스 이용 - link
+// body {
+//   font-family: 'NanumDarEuiGweDo';
+// }
+
+// css
+body {
+  font-family: 'NanumDarEuiGweDo';
 }
